Perform basic setup of pacemaker cluster on controllers
Change-Id: Ia2e4eae619ca95c0f417f713676732eb4f01304b
Depends-On: I9563eec0a2266deb2ebef2e3d76ae89d39b2be29

--- a/controller.yaml
+++ b/controller.yaml
@@ -59,6 +59,9 @@ parameters:
     default: 'br-ex'
     description: Interface where virtual ip will be assigned.
     type: string
+  CorosyncAuthKey:
+    description: Auth encryption key for corosync
+    type: string
   Debug:
     default: ''
     description: Set to True to enable debugging on all services.
