--- a/overcloud-without-mergepy.yaml
+++ b/overcloud-without-mergepy.yaml
@@ -516,6 +516,11 @@ resources:
   HeatAuthEncryptionKey:
     type: OS::Heat::RandomString
 
+  CorosyncAuthKey:
+    type: OS::Heat::RandomString
+    properties:
+      length: 128
+
   Controller:
     type: OS::Heat::ResourceGroup
     properties:
@@ -535,6 +540,7 @@ resources:
           CloudName: {get_param: CloudName}
           ControlVirtualInterface: {get_param: ControlVirtualInterface}
           ControllerExtraConfig: {get_param: controllerExtraConfig}
+          CorosyncAuthKey: {get_resource: CorosyncAuthKey}
           Debug: {get_param: Debug}
           EnableGalera: {get_param: EnableGalera}
           ExtraConfig: {get_param: ExtraConfig}
