--- a/puppet/hieradata/controller.yaml
+++ b/puppet/hieradata/controller.yaml
@@ -70,6 +70,10 @@ heat::engine::heat_stack_user_role: ''
 heat::engine::configure_delegated_roles: false
 heat::engine::trusts_delegated_roles: []
 
+# pacemaker
+corosync::authkey_source: 'string'
+corosync::multicast_address: broadcast
+
 mysql::server::manage_config_file: true
 
 tripleo::loadbalancer::keystone_admin: true
