--- a/overcloud-without-mergepy.yaml
+++ b/overcloud-without-mergepy.yaml
@@ -268,6 +268,10 @@ parameters:
     description: If enabled services will be monitored by Pacemaker; it
       will manage VIPs as well, in place of Keepalived.
     type: boolean
+  ControllerEnableCephStorage:
+    default: false
+    description: Whether to deploy Ceph Storage (OSD) on the Controller
+    type: boolean
   ExtraConfig:
     default: {}
     description: |
@@ -548,6 +552,7 @@ resources:
           Debug: {get_param: Debug}
           EnableGalera: {get_param: EnableGalera}
           EnablePacemaker: {get_param: EnablePacemaker}
+          EnableCephStorage: {get_param: ControllerEnableCephStorage}
           ExtraConfig: {get_param: ExtraConfig}
           Flavor: {get_param: OvercloudControlFlavor}
           GlancePort: {get_param: GlancePort}
