--- a/puppet/controller-puppet.yaml
+++ b/puppet/controller-puppet.yaml
@@ -72,6 +72,10 @@ parameters:
     description: If enabled services will be monitored by Pacemaker; it
       will manage VIPs as well, in place of Keepalived.
     type: boolean
+  EnableCephStorage:
+    default: false
+    description: Whether to deploy Ceph Storage (OSD) on the Controller
+    type: boolean
   ExtraConfig:
     default: {}
     description: |
@@ -521,6 +525,7 @@ resources:
               - ':5000/v2.0/'
         enable_galera: {get_param: EnableGalera}
         enable_pacemaker: {get_param: EnablePacemaker}
+        enable_ceph_storage: {get_param: EnableCephStorage}
         mysql_innodb_buffer_pool_size: {get_param: MysqlInnodbBufferPoolSize}
         mysql_root_password: {get_param: MysqlRootPassword}
         mysql_cluster_name:
@@ -732,6 +737,7 @@ resources:
                 # MySQL
                 admin_password: {get_input: admin_password}
                 enable_galera: {get_input: enable_galera}
+                enable_ceph_storage: {get_input: enable_ceph_storage}
                 mysql_innodb_buffer_pool_size: {get_input: mysql_innodb_buffer_pool_size}
                 mysql::server::root_password: {get_input: mysql_root_password}
                 mysql_cluster_name: {get_input: mysql_cluster_name}
