Separate the network configuration per flavor.
This change allows a different network config for each family of hosts. For
instance, the controller may have a different network configuration than a
block storage node. This change adds a declaration for each family in the
overcloud-resource-registry.yaml & overcloud-resource-registry-puppet.yaml.

Change-Id: I083df7ebbb535f97d8ddec2ac0e06281c55986cd

--- a/ceph-storage.yaml
+++ b/ceph-storage.yaml
@@ -28,6 +28,7 @@ parameters:
     default: ''
     description: The list of ip/names to use as Ceph monitors
     type: json
+
 resources:
   CephStorage:
     type: OS::Nova::Server
@@ -43,6 +44,15 @@ resources:
 
   NodeUserData:
     type: OS::TripleO::NodeUserData
+
+  NetworkConfig:
+    type: OS::TripleO::CephStorage::Net::SoftwareConfig
+
+  NetworkDeployment:
+    type: OS::TripleO::SoftwareDeployment
+    properties:
+      config: {get_attr: [NetworkConfig, config_id]}
+      server: {get_resource: CephStorage}
 
   CephStorageDeployment:
     type: OS::Heat::StructuredDeployment
