--- a/controller.yaml
+++ b/controller.yaml
@@ -424,7 +424,7 @@ resources:
     type: OS::TripleO::NodeUserData
 
   NetworkConfig:
-    type: OS::TripleO::Net::SoftwareConfig
+    type: OS::TripleO::Controller::Net::SoftwareConfig
 
   NetworkDeployment:
     type: OS::TripleO::SoftwareDeployment
