--- a/overcloud-resource-registry-puppet.yaml
+++ b/overcloud-resource-registry-puppet.yaml
@@ -1,11 +1,15 @@
 resource_registry:
   OS::TripleO::BlockStorage: puppet/cinder-storage-puppet.yaml
+  OS::TripleO::BlockStorage::Net::SoftwareConfig: net-config-noop.yaml
   OS::TripleO::Compute: puppet/compute-puppet.yaml
+  OS::TripleO::Compute::Net::SoftwareConfig: net-config-bridge.yaml
   OS::TripleO::SoftwareDeployment: OS::Heat::StructuredDeployment
   OS::TripleO::Controller: puppet/controller-puppet.yaml
+  OS::TripleO::Controller::Net::SoftwareConfig: net-config-bridge.yaml
   OS::TripleO::ObjectStorage: puppet/swift-storage-puppet.yaml
-  OS::TripleO::Net::SoftwareConfig: net-config-bridge.yaml
+  OS::TripleO::ObjectStorage::Net::SoftwareConfig: net-config-noop.yaml
   OS::TripleO::CephStorage: puppet/ceph-storage-puppet.yaml
+  OS::TripleO::CephStorage::Net::SoftwareConfig: net-config-noop.yaml
   OS::TripleO::ControllerPostDeployment: puppet/controller-post-puppet.yaml
   OS::TripleO::ComputePostDeployment: puppet/compute-post-puppet.yaml
   OS::TripleO::ObjectStoragePostDeployment: puppet/swift-storage-post.yaml
