--- a/puppet/cinder-storage-puppet.yaml
+++ b/puppet/cinder-storage-puppet.yaml
@@ -123,6 +123,15 @@ resources:
   NodeUserData:
     type: OS::TripleO::NodeUserData
 
+  NetworkConfig:
+    type: OS::TripleO::BlockStorage::Net::SoftwareConfig
+
+  NetworkDeployment:
+    type: OS::TripleO::SoftwareDeployment
+    properties:
+      config: {get_attr: [NetworkConfig, config_id]}
+      server: {get_resource: BlockStorage}
+
   BlockStorageDeployment:
     type: OS::Heat::StructuredDeployment
     properties:
