--- a/puppet/compute-puppet.yaml
+++ b/puppet/compute-puppet.yaml
@@ -268,7 +268,7 @@ resources:
     type: OS::TripleO::NodeUserData
 
   NetworkConfig:
-    type: OS::TripleO::Net::SoftwareConfig
+    type: OS::TripleO::Compute::Net::SoftwareConfig
 
   NetworkDeployment:
     type: OS::TripleO::SoftwareDeployment
