--- a/puppet/swift-storage-puppet.yaml
+++ b/puppet/swift-storage-puppet.yaml
@@ -68,6 +68,15 @@ resources:
   NodeUserData:
     type: OS::TripleO::NodeUserData
 
+  NetworkConfig:
+    type: OS::TripleO::ObjectStorage::Net::SoftwareConfig
+
+  NetworkDeployment:
+    type: OS::TripleO::SoftwareDeployment
+    properties:
+      config: {get_attr: [NetworkConfig, config_id]}
+      server: {get_resource: SwiftStorage}
+
   SwiftStorageHieraConfig:
     type: OS::Heat::StructuredConfig
     properties:
