--- a/swift-storage.yaml
+++ b/swift-storage.yaml
@@ -116,6 +116,15 @@ resources:
   NodeUserData:
     type: OS::TripleO::NodeUserData
 
+  NetworkConfig:
+    type: OS::TripleO::ObjectStorage::Net::SoftwareConfig
+
+  NetworkDeployment:
+    type: OS::TripleO::SoftwareDeployment
+    properties:
+      config: {get_attr: [NetworkConfig, config_id]}
+      server: {get_resource: SwiftStorage}
+
   SwiftStorageDeploy:
     type: OS::Heat::StructuredDeployment
     properties:
