--- a/overcloud-resource-registry.yaml
+++ b/overcloud-resource-registry.yaml
@@ -1,11 +1,15 @@
 resource_registry:
   OS::TripleO::BlockStorage: cinder-storage.yaml
+  OS::TripleO::BlockStorage::Net::SoftwareConfig: net-config-noop.yaml
   OS::TripleO::Compute: compute.yaml
+  OS::TripleO::Compute::Net::SoftwareConfig: net-config-noop.yaml
   OS::TripleO::SoftwareDeployment: OS::Heat::StructuredDeployment
   OS::TripleO::Controller: controller.yaml
+  OS::TripleO::Controller::Net::SoftwareConfig: net-config-noop.yaml
   OS::TripleO::ObjectStorage: swift-storage.yaml
-  OS::TripleO::Net::SoftwareConfig: net-config-noop.yaml
+  OS::TripleO::ObjectStorage::Net::SoftwareConfig: net-config-noop.yaml
   OS::TripleO::CephStorage: ceph-storage.yaml
+  OS::TripleO::CephStorage::Net::SoftwareConfig: net-config-noop.yaml
   OS::TripleO::ControllerPostDeployment: controller-post.yaml
   OS::TripleO::ComputePostDeployment: compute-post.yaml
   OS::TripleO::ObjectStoragePostDeployment: swift-storage-post.yaml
