--- a/puppet/ceph-storage-puppet.yaml
+++ b/puppet/ceph-storage-puppet.yaml
@@ -45,6 +45,15 @@ resources:
   NodeUserData:
     type: OS::TripleO::NodeUserData
 
+  NetworkConfig:
+    type: OS::TripleO::CephStorage::Net::SoftwareConfig
+
+  NetworkDeployment:
+    type: OS::TripleO::SoftwareDeployment
+    properties:
+      config: {get_attr: [NetworkConfig, config_id]}
+      server: {get_resource: CephStorage}
+
   CephStorageDeployment:
     type: OS::Heat::StructuredDeployment
     properties:
@@ -57,6 +66,7 @@ resources:
             params:
               server: {get_param: NtpServer}
         enable_package_install: {get_param: EnablePackageInstall}
+
   CephStorageConfig:
     type: OS::Heat::StructuredConfig
     properties:
