--- a/puppet/controller-puppet.yaml
+++ b/puppet/controller-puppet.yaml
@@ -431,7 +431,7 @@ resources:
     type: OS::TripleO::NodeUserData
 
   NetworkConfig:
-    type: OS::TripleO::Net::SoftwareConfig
+    type: OS::TripleO::Controller::Net::SoftwareConfig
 
   NetworkDeployment:
     type: OS::TripleO::SoftwareDeployment
