Refresh description for swift/cinder/ceph storage nodes
These appear in the Tuskar UI and CLI so are worth keeping
consistent with those of the controller/compute nodes

Change-Id: I7cdd3a67d6f190f43e279fad0c4bf5f409d1e161

--- a/puppet/ceph-storage-post-puppet.yaml
+++ b/puppet/ceph-storage-post-puppet.yaml
@@ -1,7 +1,7 @@
 heat_template_version: 2014-10-16
 
 description: >
-  OpenStack Ceph Storage node post deployment for Puppet.
+  OpenStack ceph storage node post deployment for Puppet
 
 parameters:
   servers:
