--- a/puppet/ceph-storage-puppet.yaml
+++ b/puppet/ceph-storage-puppet.yaml
@@ -1,5 +1,5 @@
 heat_template_version: 2014-10-16
-description: 'Common Ceph Storage Configuration for Puppet'
+description: 'OpenStack ceph storage node configured by Puppet'
 parameters:
   Flavor:
     description: Flavor for the Ceph Storage node.
