--- a/puppet/cinder-storage-puppet.yaml
+++ b/puppet/cinder-storage-puppet.yaml
@@ -1,5 +1,5 @@
 heat_template_version: 2014-10-16
-description: 'Block Storage Configuration w/ Puppet'
+description: 'OpenStack cinder storage configured by Puppet'
 parameters:
   Image:
     default: overcloud-cinder-volume
