--- a/puppet/swift-storage-puppet.yaml
+++ b/puppet/swift-storage-puppet.yaml
@@ -1,5 +1,5 @@
 heat_template_version: 2014-10-16
-description: 'Common Swift Storage Configuration'
+description: 'OpenStack swift storage node configured by Puppet'
 parameters:
   Flavor:
     description: Flavor for Swift storage nodes to request when deploying.
