--- a/puppet/swift-storage-post.yaml
+++ b/puppet/swift-storage-post.yaml
@@ -1,7 +1,5 @@
 heat_template_version: 2014-10-16
-description: 'Swift Storage Post Deployment'
-# NOTE: this is a noop for os-apply-config style deployments because
-# post deployment ordering is controlled by tripleo-image-elements
+description: 'OpenStack swift storage node post deployment for Puppet'
 
 parameters:
   servers:
