Perform basic setup of Pacemaker cluster using puppet-pacemaker
Depends-On: Ia1bbf53c674e34ba7c70249895b106ec0af3c249
Change-Id: Ifa9f579d26a3cba9f8705226984c7b987ae0ad1c

--- a/controller.yaml
+++ b/controller.yaml
@@ -59,9 +59,6 @@ parameters:
     default: 'br-ex'
     description: Interface where virtual ip will be assigned.
     type: string
-  CorosyncAuthKey:
-    description: Auth encryption key for corosync
-    type: string
   Debug:
     default: ''
     description: Set to True to enable debugging on all services.
@@ -69,6 +66,11 @@ parameters:
   EnableGalera:
     default: true
     description: Whether to use Galera instead of regular MariaDB.
+    type: boolean
+  EnablePacemaker:
+    default: true
+    description: If enabled services will be monitored by Pacemaker; it
+      will manage VIPs as well, in place of Keepalived.
     type: boolean
   ExtraConfig:
     default: {}
@@ -305,6 +307,9 @@ parameters:
   NtpServer:
     type: string
     default: ''
+  PcsdPassword:
+    type: string
+    description: The password for the 'pcsd' user.
   PublicVirtualInterface:
     default: 'br-ex'
     description: >
