--- a/overcloud-without-mergepy.yaml
+++ b/overcloud-without-mergepy.yaml
@@ -263,6 +263,11 @@ parameters:
     default: true
     description: Whether to use Galera instead of regular MariaDB.
     type: boolean
+  EnablePacemaker:
+    default: true
+    description: If enabled services will be monitored by Pacemaker; it
+      will manage VIPs as well, in place of Keepalived.
+    type: boolean
   ExtraConfig:
     default: {}
     description: |
@@ -516,10 +521,10 @@ resources:
   HeatAuthEncryptionKey:
     type: OS::Heat::RandomString
 
-  CorosyncAuthKey:
+  PcsdPassword:
     type: OS::Heat::RandomString
     properties:
-      length: 128
+      length: 16
 
   Controller:
     type: OS::Heat::ResourceGroup
@@ -540,9 +545,9 @@ resources:
           CloudName: {get_param: CloudName}
           ControlVirtualInterface: {get_param: ControlVirtualInterface}
           ControllerExtraConfig: {get_param: controllerExtraConfig}
-          CorosyncAuthKey: {get_resource: CorosyncAuthKey}
           Debug: {get_param: Debug}
           EnableGalera: {get_param: EnableGalera}
+          EnablePacemaker: {get_param: EnablePacemaker}
           ExtraConfig: {get_param: ExtraConfig}
           Flavor: {get_param: OvercloudControlFlavor}
           GlancePort: {get_param: GlancePort}
@@ -583,6 +588,7 @@ resources:
           NeutronTunnelTypes: {get_param: NeutronTunnelTypes}
           NovaPassword: {get_param: NovaPassword}
           NtpServer: {get_param: NtpServer}
+          PcsdPassword: {get_resource: PcsdPassword}
           PublicVirtualInterface: {get_param: PublicVirtualInterface}
           RabbitPassword: {get_param: RabbitPassword}
           RabbitUserName: {get_param: RabbitUserName}
