--- a/puppet/hieradata/controller.yaml
+++ b/puppet/hieradata/controller.yaml
@@ -73,8 +73,8 @@ heat::engine::configure_delegated_roles: false
 heat::engine::trusts_delegated_roles: []
 
 # pacemaker
-corosync::authkey_source: 'string'
-corosync::multicast_address: broadcast
+pacemaker::corosync::cluster_name: 'tripleo_cluster'
+pacemaker::corosync::manage_fw: false
 
 mysql::server::manage_config_file: true
 
