--- a/puppet/controller-puppet.yaml
+++ b/puppet/controller-puppet.yaml
@@ -59,9 +59,6 @@ parameters:
     default: 'br-ex'
     description: Interface where virtual ip will be assigned.
     type: string
-  CorosyncAuthKey:
-    description: Auth encryption key for corosync
-    type: string
   Debug:
     default: ''
     description: Set to True to enable debugging on all services.
@@ -69,6 +66,11 @@ parameters:
   EnableGalera:
     default: true
     description: Whether to use Galera instead of regular MariaDB.
+    type: boolean
+  EnablePacemaker:
+    default: true
+    description: If enabled services will be monitored by Pacemaker; it
+      will manage VIPs as well, in place of Keepalived.
     type: boolean
   ExtraConfig:
     default: {}
@@ -309,6 +311,9 @@ parameters:
   NtpServer:
     type: string
     default: ''
+  PcsdPassword:
+    type: string
+    description: The password for the 'pcsd' user.
   PublicVirtualInterface:
     default: 'br-ex'
     description: >
@@ -436,7 +441,6 @@ resources:
         bootstack_nodeid: {get_attr: [Controller, name]}
         controller_host: {get_attr: [Controller, networks, ctlplane, 0]}
         controller_virtual_ip: {get_param: VirtualIP}
-        corosync_auth_key: {get_param: CorosyncAuthKey}
         neutron_enable_tunneling: {get_param: NeutronEnableTunnelling}
         heat.watch_server_url:
           list_join:
@@ -516,6 +520,7 @@ resources:
               - {get_param: VirtualIP}
               - ':5000/v2.0/'
         enable_galera: {get_param: EnableGalera}
+        enable_pacemaker: {get_param: EnablePacemaker}
         mysql_innodb_buffer_pool_size: {get_param: MysqlInnodbBufferPoolSize}
         mysql_root_password: {get_param: MysqlRootPassword}
         mysql_cluster_name:
@@ -569,6 +574,7 @@ resources:
             - - 'mysql://nova:unset@'
               - {get_param: VirtualIP}
               - '/nova'
+        pcsd_password: {get_param: PcsdPassword}
         rabbit_hosts:
           str_replace:
             template: '["host"]'
@@ -627,8 +633,8 @@ resources:
                 controller_host: {get_input: controller_host} #local-ipv4
 
                 # Pacemaker
-                corosync::authkey: {get_input: corosync_auth_key}
-                corosync::bind_address: {get_input: controller_host}
+                enable_pacemaker: {get_input: enable_pacemaker}
+                hacluster_pwd: {get_input: pcsd_password}
 
                 # Swift
                 swift::proxy::proxy_local_net_ip: {get_input: controller_host}
