Add RabbitMQ as a Pacemaker resource when EnablePacemaker
Change-Id: I43a74c1db324144d33e96a94cb718db30e0fd243

--- a/puppet/all-nodes-config.yaml
+++ b/puppet/all-nodes-config.yaml
@@ -54,10 +54,10 @@ resources:
                   list_join:
                   - ','
                   - {get_param: controller_ips}
-                rabbit_node_names:
+                rabbit_node_ips:
                   list_join:
                   - ','
-                  - {get_param: controller_names}
+                  - {get_param: controller_ips}
                 mongo_node_ips:
                   list_join:
                   - ','
