Set EnablePacemaker == false be default
Pacemaker is a new feature and should probably be disabled
by default.

Change-Id: I840d08c9e0563aeb7128eb2b21929612b7a5bf7a

--- a/overcloud-without-mergepy.yaml
+++ b/overcloud-without-mergepy.yaml
@@ -264,7 +264,7 @@ parameters:
     description: Whether to use Galera instead of regular MariaDB.
     type: boolean
   EnablePacemaker:
-    default: true
+    default: false
     description: If enabled services will be monitored by Pacemaker; it
       will manage VIPs as well, in place of Keepalived.
     type: boolean
