--- a/puppet/all-nodes-config.yaml
+++ b/puppet/all-nodes-config.yaml
@@ -54,6 +54,14 @@ resources:
                   list_join:
                   - ','
                   - {get_param: controller_ips}
+                controller_node_names:
+                  list_join:
+                  - ','
+                  - {get_param: controller_names}
+                galera_node_names:
+                  list_join:
+                  - ','
+                  - {get_param: controller_names}
                 rabbit_node_ips:
                   list_join:
                   - ','
