--- a/puppet/controller-post-puppet.yaml
+++ b/puppet/controller-post-puppet.yaml
@@ -63,10 +63,19 @@ resources:
       input_values:
         step: 3
 
+  ControllerDeploymentOvercloudServices_Step5:
+    type: OS::Heat::StructuredDeployments
+    depends_on: ControllerDeploymentOvercloudServices_Step4
+    properties:
+      servers:  {get_param: servers}
+      config: {get_resource: ControllerPuppetConfig}
+      input_values:
+        step: 4
+
   # Note, this should come last, so use depends_on to ensure
   # this is created after any other resources.
   ExtraConfig:
-    depends_on: ControllerDeploymentOvercloudServices_Step4
+    depends_on: ControllerDeploymentOvercloudServices_Step5
     type: OS::TripleO::NodeExtraConfigPost
     properties:
         servers: {get_param: servers}
