--- a/puppet/hieradata/controller.yaml
+++ b/puppet/hieradata/controller.yaml
@@ -84,6 +84,10 @@ horizon::allowed_hosts: '*'
 
 mysql::server::manage_config_file: true
 
+
+tripleo::loadbalancer::galera_master_ip: "%{hiera('bootstrap_nodeid_ip')}"
+tripleo::loadbalancer::galera_master_hostname: "%{hiera('bootstrap_nodeid')}"
+
 tripleo::loadbalancer::keystone_admin: true
 tripleo::loadbalancer::keystone_public: true
 tripleo::loadbalancer::neutron: true
