--- a/swift-storage.yaml
+++ b/swift-storage.yaml
@@ -145,7 +145,7 @@ outputs:
   hosts_entry:
     value:
       str_replace:
-        template: "IP HOST HOST.novalocal"
+        template: "IP HOST"
         params:
           IP: {get_attr: [SwiftStorage, networks, ctlplane, 0]}
           HOST: {get_attr: [SwiftStorage, name]}
