--- a/controller.yaml
+++ b/controller.yaml
@@ -922,7 +922,7 @@ outputs:
       Server's IP address and hostname in the /etc/hosts format
     value:
       str_replace:
-        template: IP HOST HOST.novalocal CLOUDNAME
+        template: IP HOST CLOUDNAME
         params:
           IP: {get_attr: [Controller, networks, ctlplane, 0]}
           HOST: {get_attr: [Controller, name]}
