--- a/puppet/cinder-storage-puppet.yaml
+++ b/puppet/cinder-storage-puppet.yaml
@@ -206,7 +206,7 @@ outputs:
   hosts_entry:
     value:
       str_replace:
-        template: "IP HOST HOST.novalocal"
+        template: "IP HOST"
         params:
           IP: {get_attr: [BlockStorage, networks, ctlplane, 0]}
           HOST: {get_attr: [BlockStorage, name]}
