--- a/puppet/controller-puppet.yaml
+++ b/puppet/controller-puppet.yaml
@@ -14,6 +14,10 @@ parameters:
     description: The keystone auth secret.
     type: string
     hidden: true
+  CeilometerBackend:
+    default: 'mongodb'
+    description: The ceilometer backend type.
+    type: string
   CeilometerMeteringSecret:
     default: unset
     description: Secret shared by the ceilometer services.
@@ -577,8 +581,15 @@ resources:
             - - 'http://'
               - {get_param: VirtualIP}
               - ':35357/v2.0'
+        ceilometer_backend: {get_param: CeilometerBackend}
         ceilometer_metering_secret: {get_param: CeilometerMeteringSecret}
         ceilometer_password: {get_param: CeilometerPassword}
+        ceilometer_dsn:
+          list_join:
+            - ''
+            - - 'mysql://ceilometer:unset@'
+              - {get_param: VirtualIP}
+              - '/ceilometer'
         snmpd_readonly_user_name: {get_param: SnmpdReadonlyUserName}
         snmpd_readonly_user_password: {get_param: SnmpdReadonlyUserPassword}
         nova_password: {get_param: NovaPassword}
@@ -787,6 +798,8 @@ resources:
                 neutron_dsn: {get_input: neutron_dsn}
 
                 # Ceilometer
+                ceilometer_backend: {get_input: ceilometer_backend}
+                ceilometer_mysql_conn_string: {get_input: ceilometer_dsn}
                 ceilometer::metering_secret: {get_input: ceilometer_metering_secret}
                 ceilometer::rabbit_hosts: {get_input: rabbit_hosts}
                 ceilometer::rabbit_userid: {get_input: rabbit_username}
