Update neutron local_ip to use the tenant network
This patch uses the new NetIpMap and ServiceMap abstractions
to assign the Neutron tenant tunneling network addresses.
By default this is associated with the tenant network. If no
tenant network is activated this will still default to
the control plane IP address.

Change-Id: I9db7dd0c282af4e5f24947f31da2b89f231e6ae4

--- a/overcloud-resource-registry-puppet.yaml
+++ b/overcloud-resource-registry-puppet.yaml
@@ -63,3 +63,6 @@ resource_registry:
 
 parameter_defaults:
   EnablePackageInstall: false
+  # Mapping of service_name -> network name.
+  ServiceNetMap:
+    NeutronLocalIp: tenant
