Revert "Keystone domain for Heat"
This reverts commit 7313930c22b9f18d67e630de084ffcc6fad5ebe7.

Seeing errors when trying to create the keystone admin
role with packages. (ImportError: No module named os_client_config)

Change-Id: I78796598ccb8d2ffd6bfca85dce7d18dc0fd768e
Related-bug: #1450786

--- a/overcloud-without-mergepy.yaml
+++ b/overcloud-without-mergepy.yaml
@@ -337,9 +337,9 @@ parameters:
     type: string
     hidden: true
   HeatStackDomainAdminPassword:
-    default: unset
-    description: Password for heat_stack_domain_admin user.
+    description: Password for heat_domain_admin user.
     type: string
+    default: ''
     hidden: true
   KeystoneCACertificate:
     default: ''
