--- a/puppet/controller-puppet.yaml
+++ b/puppet/controller-puppet.yaml
@@ -154,9 +154,9 @@ parameters:
     type: string
     hidden: true
   HeatStackDomainAdminPassword:
-    default: unset
-    description: Password for heat_stack_domain_admin user.
+    description: Password for heat_domain_admin user.
     type: string
+    default: ''
     hidden: true
   HeatAuthEncryptionKey:
     description: Auth encryption key for heat-engine
@@ -740,13 +740,8 @@ resources:
                 heat::database_connection: {get_input: heat_dsn}
                 heat::instance_user: heat-admin
                 heat::debug: {get_input: debug}
-                # TO-DO: Remove this class as soon as Keystone v3 will be fully functional
-                heat::keystone::domain::auth_url: {list_join: ['', ['http://', {get_param: VirtualIP} , ':35357/v2.0']]}
-                heat::keystone::domain::keystone_password: {get_input: admin_password}
-                heat::keystone::domain::domain_password: {get_input: heat_stack_domain_admin_password}
 
                 # Keystone
-                keystone::roles::admin::password: {get_input: admin_password}
                 keystone::admin_token: {get_input: admin_token}
                 keystone_ca_certificate: {get_input: keystone_ca_certificate}
                 keystone_signing_key: {get_input: keystone_signing_key}
